--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #252525;
+  --background: #0B0B0B;
   --foreground: #ffffff;
 }
 
@@ -19,13 +19,15 @@ body {
   font-style: normal;
 }
 
-.stroke-text {
+/* .stroke-text {
   color: transparent;
   -webkit-text-stroke: 2px rgb(179, 179, 179);
+} */
+
+.stars_bg {
+  background: linear-gradient(#000 -91%, #0b0b0b 100%);
 }
 
-
 .grad {
-  box-shadow: 0px -10px 36px 9px black;
-  background: #000000;
+  box-shadow: 0 -12px 20px 8px #0B0B0B;
 }
