--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,9 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,200,100,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,200,100,400;0,700;1,400&display=swap");
 @import "tailwindcss";
 
 :root {
-  --background: #252525;
+  --background: #141414;
   --foreground: #ffffff;
 }
 
@@ -24,8 +24,28 @@ body {
   -webkit-text-stroke: 2px rgb(179, 179, 179);
 }
 
+@media screen and (max-width: 640px) {
+  .stroke-text {
+    -webkit-text-stroke: 0.5px rgb(179, 179, 179);
+    color: white;
+  }
+}
+
+.start_bg {
+  background: linear-gradient(
+    180deg,
+    rgba(20, 20, 20, 0.8) 0%,
+    rgba(20, 20, 20, 0.8) 100%
+  );
+}
 
 .grad {
-  box-shadow: 0px -10px 36px 9px black;
-  background: #000000;
+  background: #141414;
+  box-shadow: 0 -13px 74px 44px #141414;
+}
+
+@media screen and (max-width: 1080px) {
+  .grad {
+    box-shadow: 0 -46px 74px 44px #141414;
+  }
 }
