--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -21,13 +21,13 @@
 
   h1 {
     font-size: 2rem;
-    font-weight: 800;
+  
     color: var(--color-title-text);
   }
 
   h2 {
     font-size: 1.75rem;
-    font-weight: 700;
+ 
     color: var(--color-title-text);
   }
 
@@ -50,6 +50,20 @@
     font-weight: 300;
     line-height: 1.75rem;
     color: var(--color-sub-text);
+  }
+}
+
+@layer components {
+  .primary-header {
+    font-size: 2rem;
+    font-weight: 700 !important;
+    color: var(--color-title-text);
+  }
+
+  .secondary-header {
+    font-size: 1.75rem;
+    font-weight: 800;
+    color: var(--color-title-text);
   }
 }
 
@@ -77,7 +91,7 @@
   overflow: hidden;
   padding: 2rem 1.5rem;
   background-color: var(--color-background);
-  color: var(--color-title);
+  color: var(--color-title-text);
   font-family: var(--font-display);
 }
 
@@ -89,7 +103,7 @@
 
 .marquee {
   display: flex;
-  gap: 1.5rem;
+  gap: 6rem;
   white-space: nowrap;
   align-items: center;
   animation: marquee 10s linear infinite;
@@ -100,7 +114,7 @@
   align-items: center;
   gap: 0.5rem;
   min-width: 260px;
-  line-height: 1.5;
+  line-height: 2;
 }
 
 @keyframes marquee {
