feat: doing about section and photos

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -12,6 +12,9 @@
   --color-sub-text: #f8f8f8;
   --color-background: #020E0F;
 }
+*{
+  font-family: var(--font-display);
+}
 
 @layer base {
   html {
