--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -46,7 +46,7 @@ nav {
 
 
 
-@keyframes marquee {
+/* @keyframes marquee {
   0% {
     transform: translateX(0);
   }
@@ -54,7 +54,7 @@ nav {
   100% {
     transform: translateX(-100%);
   }
-}
+} */
 
 @layer base {
   html {
