fixed about animation , layouts , and responsive

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -44,17 +44,14 @@ nav {
 
 
 
-
-
-/* @keyframes marquee {
+@keyframes marquee {
   0% {
     transform: translateX(0);
   }
-
   100% {
     transform: translateX(-100%);
   }
-} */
+}
 
 @layer base {
   html {
