--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
 :root {
-  --font-display: 'Mona Sans', sans-serif;
-  --color-title-text: #F8F8FF;
+  --font-display: "Mona Sans", sans-serif;
+  --color-title-text: #f8f8ff;
   --color-sub-text: #f8f8f8;
-  --color-background: #020E0F;
+  --color-background: #020e0f;
 }
 
 html {
@@ -45,7 +45,6 @@ nav {
 .shiny-text.disabled {
   animation: none;
 }
-
 
 /* 
 @keyframes marquee {
@@ -133,11 +132,9 @@ nav {
   }
 
   .shadow-glow {
-    box-shadow:
-      0 0 10px 2px rgba(255, 255, 255, 0.15),
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.15),
       inset 0 0 5px 1px rgba(255, 255, 255, 0.1);
   }
-
 }
 
 .marquee-wrapper {
@@ -169,12 +166,11 @@ nav {
   }
 }
 
-@media (min-width:2300px){
+@media (min-width: 2300px) {
   .home_container {
-    height:1100px !important; 
+    height: 1100px !important;
   }
 }
-
 
 .marquee-item {
   display: flex;
@@ -184,13 +180,23 @@ nav {
   line-height: 2;
 }
 
-
 .bg-grads {
-  background: conic-gradient(from 0.25turn at 54% 85%, #00000081, 157deg, #00b4b43d, 352deg, #00B4B4)
+  background: conic-gradient(
+    from 0.25turn at 54% 85%,
+    #00000081,
+    157deg,
+    #00b4b43d,
+    352deg,
+    #00b4b4
+  );
 }
 
 .bg_top_graident {
-  background: linear-gradient(180deg, rgba(2, 14, 15, 1) 1%, rgba(21, 21, 20, 0.18) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 14, 15, 1) 1%,
+    rgba(21, 21, 20, 0.18) 100%
+  );
 }
 
 /* conic-gradient( from 0.25turn at 54% 85%, #00000081, 87deg, #1b6f9336, 343deg, #11bae1 ) */
